# rag_web_app

./: .dockerignore  .env.example  DOCKER_GUIDE.md  README.md  docker-compose.yml  update-frontend.sh
nginx/: .dockerignore  Dockerfile  nginx.conf
rag_web_admin/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
rag_web_admin/src/: App.jsx  index.css
rag_web_admin/src/components/: Dashboard.jsx  KnowledgeBase.jsx  (+5 more)
rag_web_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
rag_web_backend/alembic/versions/: 1d60b64d31cc_remove_max_queries_per_day_from_query_.py  20251224_add_slug_to_departments.py  20260115_add_file_is_public.py  20260115_add_query_users.py
rag_web_backend/app/: config.py  main.py
rag_web_backend/app/api/: __init__.py  files.py  query_auth.py  query_users.py  rag.py
rag_web_backend/app/core/: logging_config.py  security.py
rag_web_backend/app/models/: __init__.py  file.py  query_user.py
rag_web_backend/app/schemas/: file.py  query_user.py
rag_web_backend/app/services/: file_processor.py
rag_web_backend/app/services/document_processing/: embedding_processor.py  summarizer.py
rag_web_backend/app/services/llm/: ollama_client.py
rag_web_backend/app/services/llm/prompts/: rag.py
rag_web_backend/app/services/rag/: rag_engine.py  reranker.py  vector_store.py
rag_web_backend/scripts/: init_db.py
rag_web_query/: .dockerignore  .env.example  .gitignore  Dockerfile  vite.config.js
rag_web_query/src/: App.jsx  main.jsx
(+35 files in other folders)
